# libcmm

./: .gitignore  Android.mk  Makeconf.local.sample  Makefile  Makefile.in  README.md  README.old  README.txt  REDUNDANCY_ANALYSIS_TODO  TODO.txt  ack_timeouts.cpp  ack_timeouts.h  analyze_intnw_log.py  android-source.diff  android_readme.txt  api_figure.tex  cdf_sampler.cpp  cdf_sampler.h  cdf_test.cpp  cdftest.in  check_timestamps.py  cmm_conn_bootstrapper.cpp  cmm_conn_bootstrapper.h  cmm_internal_listener.cpp  cmm_internal_listener.h  cmm_socket.cpp  cmm_socket.h  cmm_socket.private.h  cmm_socket_control.cpp  cmm_socket_control.h  cmm_socket_impl.cpp  cmm_socket_passthrough.cpp  cmm_socket_receiver.cpp  cmm_socket_receiver.h  cmm_socket_scheduler.cpp  cmm_socket_scheduler.h  cmm_socket_sender.cpp  cmm_socket_sender.h  cmm_socket_serial.cpp  cmm_thread.cpp  (+116 more)
AndroidSimpleSender/: AndroidManifest.xml  Application.mk  ant.properties  build.properties  build.xml
conn_scout/: Makefile  libcmm_scout.cpp
ds/: Makefile  ds_hash.c  ds_hash.h  ds_hash.private.h  ds_list.c  ds_list.h  ds_list.private.h
javalib/: .gitignore  .project  Android.mk  AndroidManifest.xml
jni/: Android.mk  Application.mk
libancillary/: .gitignore  Android.mk  Makefile  ancillary.h  fd_recv.c  fd_send.c  test_tofrom.c
proxy/: Makefile  proxy.cpp  proxy.h  rpc3proxy.cpp  substream.cpp  substream.h
scout/: .gitignore  Application.mk  Makefile  libcmm_scout.cpp  virgil_server.c
tbb/: concurrent_hash_map.h  queuing_rw_mutex.h  scalable_allocator.h  task.h  tbb_profiling.h  tbb_stddef.h
(+148 files in other folders)
